--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,46 +1,90 @@
 <resources>
     <string name="app_name">SmartCalendar</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="lorem_ipsum">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
-        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
-        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
-        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
-        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
-        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
-        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
-        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
-        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
-        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
-        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
-        bibendum, vel congue leo egestas.\n\n
-        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
-        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
-        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
-        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
-        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
-        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
-        est.\n\n
-        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
-        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
-        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
-        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
-        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
-        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
-        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
-        convallis.\n\n
-        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
-        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
-        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
-        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
-        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
-        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
-    </string>
+    
+    <!-- Navigation -->
+    <string name="nav_calendar">Calendar</string>
+    <string name="nav_mine">Mine</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    
+    <!-- View Modes -->
+    <string name="view_agenda">Agenda</string>
+    <string name="view_day">Day</string>
+    <string name="view_week">Week</string>
+    <string name="view_month">Month</string>
+    <string name="view_year">Year</string>
+    <string name="coming_soon">Soon</string>
+    
+    <!-- Calendar -->
+    <string name="calendars_header">Calendars</string>
+    <string name="calendars_subtitle">Select calendars to show on your timeline.</string>
+    <string name="show_all">Show All</string>
+    <string name="refresh_calendars">Refresh device calendars</string>
+    
+    <!-- Event Modal -->
+    <string name="new_event">New event</string>
+    <string name="edit_event">Edit event</string>
+    <string name="hint_title">Title</string>
+    <string name="label_date">Date</string>
+    <string name="label_all_day">All day</string>
+    <string name="label_start">Start</string>
+    <string name="label_end">End</string>
+    <string name="label_description">Description</string>
+    <string name="hint_description">Add description…</string>
+    <string name="label_location">Location</string>
+    <string name="hint_location">Add location…</string>
+    <string name="label_reminder">Reminder</string>
+    <string name="label_set_repeat">Set Repeat</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
+    
+    <!-- Reminder Options -->
+    <string name="reminder_none">None</string>
+    <string name="reminder_5min">5 minutes before</string>
+    <string name="reminder_10min">10 minutes before</string>
+    <string name="reminder_15min">15 minutes before</string>
+    <string name="reminder_30min">30 minutes before</string>
+    <string name="reminder_1hour">1 hour before</string>
+    <string name="reminder_1day">1 day before</string>
+    
+    <!-- Repeat Options -->
+    <string name="freq_daily">Daily</string>
+    <string name="freq_weekly">Weekly</string>
+    <string name="freq_monthly">Monthly</string>
+    <string name="freq_yearly">Yearly</string>
+    <string name="label_repeat_every">Repeat every</string>
+    <string name="label_repeat_on">Repeat on</string>
+    <string name="label_repeat_ends">Repeat ends</string>
+    <string name="label_occurrences">Occurrences</string>
+    <string name="repeat_endlessly">Endlessly</string>
+    <string name="repeat_until_date">Until a date</string>
+    <string name="repeat_count">Repeat count</string>
+    <string name="unit_day">Day</string>
+    <string name="unit_week">Week</string>
+    <string name="unit_month">Month</string>
+    <string name="unit_year">Year</string>
+    
+    <!-- Days of Week -->
+    <string name="day_sun">S</string>
+    <string name="day_mon">M</string>
+    <string name="day_tue">T</string>
+    <string name="day_wed">W</string>
+    <string name="day_thu">T</string>
+    <string name="day_fri">F</string>
+    <string name="day_sat">S</string>
+    
+    <!-- Content Descriptions -->
+    <string name="mine_icon_desc">Profile icon</string>
+    <string name="dropdown_arrow">Dropdown arrow</string>
+    <string name="decrease">Decrease</string>
+    <string name="increase">Increase</string>
+    <string name="add_event">Add event</string>
+    
+    <!-- Mine Fragment -->
+    <string name="mine_placeholder">Profile and settings coming soon</string>
+    
+    <!-- Week View -->
+    <string name="week_label">Week</string>
 </resources>
