--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,12 @@
     
     <!-- Week View -->
     <string name="week_label">Week</string>
+    
+    <!-- Import/Export -->
+    <string name="sync_header">Sync</string>
+    <string name="import_calendar">Import from Calendar</string>
+    <string name="export_calendar">Export to Calendar</string>
+    <string name="select_calendar">Select Calendar</string>
+    <string name="import_success">Imported %d events</string>
+    <string name="export_success">Exported %d events</string>
 </resources>
