--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">SmartCalendar</string>
     <string name="action_settings">Settings</string>
+    <string name="action_sync">Sync</string>
+    <string name="sync_success">Sync completed</string>
+    <string name="sync_error">Sync failed</string>
+    <string name="syncing">Syncing…</string>
     
     <!-- Navigation -->
     <string name="nav_calendar">Calendar</string>
